// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Wizard /> should call navigate the previous step when click on précédent 1`] = `
<div>
  <div
    class="sc-iGgWBj biWgIW"
  >
    <form
      class="sc-kbdlSk CXQkJ"
    >
      <div
        class="sc-hYmls jKkoYJ"
      >
        <div
          class="sc-eXsaLi bdWhoM"
        >
          <h1
            class="sc-bOQTJJ hoVrPf"
          >
            test H1
          </h1>
        </div>
      </div>
      <div
        class="sc-iGgWBj sc-fKWMtX cWzIZL bcBkxu"
      >
        <span
          class="sc-kgOKUu bjvUoK"
        >
          Étape
          <span
            class="sc-bfhvDw kYFtQY"
          >
            s
          </span>
          <span
            class="sc-cMa-dbN gAIJdP"
          >
             
            1/2
          </span>
        </span>
        <ol
          class="sc-cfxfcM kMmTaI"
        >
          <li
            aria-live="polite"
            class="sc-fUBkdm kTxRgT"
            tabindex="-1"
            title="onglet actif"
          >
            <span
              class="sc-hBtRBD bUvebq"
            >
              1
            </span>
            First Step
          </li>
          <li
            class="sc-fUBkdm jQjOBp"
          >
            <span
              class="sc-hBtRBD zIbRN"
            >
              2
            </span>
            Second Step
          </li>
        </ol>
      </div>
      <p>
        Premiere Etape
      </p>
      <div
        class="sc-iLsKjm eOFMyx"
      >
        <button
          class="sc-kOPcWz cefBoA sc-epALIP sc-lbJcrp dyTjwR innUxH"
        >
          Commencer
          <svg
            aria-hidden="true"
            class="sc-eifrsQ dsvLPn"
            fill="none"
            viewBox="0 0 28 15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m27.875 7.153-6-6.284a.526.526 0 0 0-.711-.023.496.496 0 0 0-.024.688l5.204 5.468H.5c-.276 0-.5.217-.5.484s.224.483.5.483h25.844l-5.204 5.469a.493.493 0 0 0 .024.687.52.52 0 0 0 .711-.023l6-6.284a.506.506 0 0 0 0-.665z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<Wizard /> should handle initialState.stepIndex 1`] = `
<div>
  <div
    class="sc-iGgWBj biWgIW"
  >
    <form
      class="sc-kbdlSk CXQkJ"
    >
      <div
        class="sc-hYmls jKkoYJ"
      >
        <div
          class="sc-eXsaLi bdWhoM"
        >
          <h1
            class="sc-bOQTJJ hoVrPf"
          >
            test H1
          </h1>
        </div>
      </div>
      <div
        class="sc-iGgWBj sc-fKWMtX cWzIZL bcBkxu"
      >
        <span
          class="sc-kgOKUu bjvUoK"
        >
          Étape
          <span
            class="sc-bfhvDw kYFtQY"
          >
            s
          </span>
          <span
            class="sc-cMa-dbN gAIJdP"
          >
             
            2/2
          </span>
        </span>
        <ol
          class="sc-cfxfcM kMmTaI"
        >
          <li
            class="sc-fUBkdm jQjOBp"
          >
            <span
              class="sc-hBtRBD zIbRN"
            >
              1
            </span>
            First Step
          </li>
          <li
            aria-live="polite"
            class="sc-fUBkdm kTxRgT"
            tabindex="-1"
            title="onglet actif"
          >
            <span
              class="sc-hBtRBD bUvebq"
            >
              2
            </span>
            Second Step
          </li>
        </ol>
      </div>
      <p>
        Deuxieme Etape
      </p>
      <label
        for="cb"
      >
        etape facultative
        <input
          id="cb"
          name="fooStep"
          type="checkbox"
          value=""
        />
      </label>
      <div
        class="sc-iLsKjm eOFMyx"
      >
        <button
          class="sc-kOPcWz dSQWfG sc-epALIP dyTjwR"
          type="button"
        >
          Précédent
        </button>
        <button
          class="sc-kOPcWz gWtlVM sc-epALIP dyTjwR"
          type="button"
        >
          Imprimer le résultat
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<Wizard /> should handle initialValues 1`] = `
<div>
  <div
    class="sc-iGgWBj biWgIW"
  >
    <form
      class="sc-kbdlSk CXQkJ"
    >
      <div
        class="sc-hYmls jKkoYJ"
      >
        <div
          class="sc-eXsaLi bdWhoM"
        >
          <h1
            class="sc-bOQTJJ hoVrPf"
          >
            test H1
          </h1>
        </div>
      </div>
      <div
        class="sc-iGgWBj sc-fKWMtX cWzIZL bcBkxu"
      >
        <span
          class="sc-kgOKUu bjvUoK"
        >
          Étape
          <span
            class="sc-bfhvDw kYFtQY"
          >
            s
          </span>
          <span
            class="sc-cMa-dbN gAIJdP"
          >
             
            1/3
          </span>
        </span>
        <ol
          class="sc-cfxfcM kMmTaI"
        >
          <li
            aria-live="polite"
            class="sc-fUBkdm kTxRgT"
            tabindex="-1"
            title="onglet actif"
          >
            <span
              class="sc-hBtRBD bUvebq"
            >
              1
            </span>
            First Step
          </li>
          <li
            class="sc-fUBkdm jQjOBp"
          >
            <span
              class="sc-hBtRBD zIbRN"
            >
              2
            </span>
            Second Step
          </li>
          <li
            class="sc-fUBkdm jQjOBp"
          >
            <span
              class="sc-hBtRBD zIbRN"
            >
              3
            </span>
            Optional Step
          </li>
        </ol>
      </div>
      <p>
        Premiere Etape
      </p>
      <div
        class="sc-iLsKjm eOFMyx"
      >
        <button
          class="sc-kOPcWz cefBoA sc-epALIP sc-lbJcrp dyTjwR innUxH"
        >
          Commencer
          <svg
            aria-hidden="true"
            class="sc-eifrsQ dsvLPn"
            fill="none"
            viewBox="0 0 28 15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m27.875 7.153-6-6.284a.526.526 0 0 0-.711-.023.496.496 0 0 0-.024.688l5.204 5.468H.5c-.276 0-.5.217-.5.484s.224.483.5.483h25.844l-5.204 5.469a.493.493 0 0 0 .024.687.52.52 0 0 0 .711-.023l6-6.284a.506.506 0 0 0 0-.665z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<Wizard /> should navigate to the second step when click on Commencer 1`] = `
<div>
  <div
    class="sc-iGgWBj biWgIW"
  >
    <form
      class="sc-kbdlSk CXQkJ"
    >
      <div
        class="sc-hYmls jKkoYJ"
      >
        <div
          class="sc-eXsaLi bdWhoM"
        >
          <h1
            class="sc-bOQTJJ hoVrPf"
          >
            test H1
          </h1>
        </div>
      </div>
      <div
        class="sc-iGgWBj sc-fKWMtX cWzIZL bcBkxu"
      >
        <span
          class="sc-kgOKUu bjvUoK"
        >
          Étape
          <span
            class="sc-bfhvDw kYFtQY"
          >
            s
          </span>
          <span
            class="sc-cMa-dbN gAIJdP"
          >
             
            2/2
          </span>
        </span>
        <ol
          class="sc-cfxfcM kMmTaI"
        >
          <li
            class="sc-fUBkdm jQjOBp"
          >
            <span
              class="sc-hBtRBD zIbRN"
            >
              1
            </span>
            First Step
          </li>
          <li
            aria-live="polite"
            class="sc-fUBkdm kTxRgT"
            tabindex="-1"
            title="onglet actif"
          >
            <span
              class="sc-hBtRBD bUvebq"
            >
              2
            </span>
            Second Step
          </li>
        </ol>
      </div>
      <p>
        Deuxieme Etape
      </p>
      <label
        for="cb"
      >
        etape facultative
        <input
          id="cb"
          name="fooStep"
          type="checkbox"
          value=""
        />
      </label>
      <div
        class="sc-iLsKjm eOFMyx"
      >
        <button
          class="sc-kOPcWz dSQWfG sc-epALIP dyTjwR"
          type="button"
        >
          Précédent
        </button>
        <button
          class="sc-kOPcWz gWtlVM sc-epALIP dyTjwR"
          type="button"
        >
          Imprimer le résultat
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<Wizard /> should render a step 1`] = `
<div>
  <div
    class="sc-iGgWBj biWgIW"
  >
    <form
      class="sc-kbdlSk CXQkJ"
    >
      <div
        class="sc-hYmls jKkoYJ"
      >
        <div
          class="sc-eXsaLi bdWhoM"
        >
          <h1
            class="sc-bOQTJJ hoVrPf"
          >
            test H1
          </h1>
        </div>
      </div>
      <div
        class="sc-iGgWBj sc-fKWMtX cWzIZL bcBkxu"
      >
        <span
          class="sc-kgOKUu bjvUoK"
        >
          Étape
          <span
            class="sc-bfhvDw kYFtQY"
          >
            s
          </span>
          <span
            class="sc-cMa-dbN gAIJdP"
          >
             
            1/2
          </span>
        </span>
        <ol
          class="sc-cfxfcM kMmTaI"
        >
          <li
            aria-live="polite"
            class="sc-fUBkdm kTxRgT"
            tabindex="-1"
            title="onglet actif"
          >
            <span
              class="sc-hBtRBD bUvebq"
            >
              1
            </span>
            First Step
          </li>
          <li
            class="sc-fUBkdm jQjOBp"
          >
            <span
              class="sc-hBtRBD zIbRN"
            >
              2
            </span>
            Second Step
          </li>
        </ol>
      </div>
      <p>
        Premiere Etape
      </p>
      <div
        class="sc-iLsKjm eOFMyx"
      >
        <button
          class="sc-kOPcWz cefBoA sc-epALIP sc-lbJcrp dyTjwR innUxH"
        >
          Commencer
          <svg
            aria-hidden="true"
            class="sc-eifrsQ dsvLPn"
            fill="none"
            viewBox="0 0 28 15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m27.875 7.153-6-6.284a.526.526 0 0 0-.711-.023.496.496 0 0 0-.024.688l5.204 5.468H.5c-.276 0-.5.217-.5.484s.224.483.5.483h25.844l-5.204 5.469a.493.493 0 0 0 .024.687.52.52 0 0 0 .711-.023l6-6.284a.506.506 0 0 0 0-.665z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </form>
  </div>
</div>
`;
